@@ -436,7 +436,7 @@ void req_authenuser(
  * utility 
  * 
 */
-void req_altauthenuser(
+int req_altauthenuser(
 
   struct batch_request *preq)  /* I */
 
@@ -462,7 +462,7 @@ void req_altauthenuser(
   if(s >= PBS_NET_MAX_CONNECTIONS)
 	{
 	req_reject(PBSE_BADCRED, 0, preq, NULL, "cannot authenticate user");
-	return;
+	return (PBSE_BADCRED);
 	}
 
 
@@ -470,7 +470,8 @@ void req_altauthenuser(
   if(rc)
 	{
 	/* FAILED */
-	return;
+	req_reject(PBSE_SYSTEM, 0, preq, NULL, "munge failure");
+	return (PBSE_SYSTEM);
 	}
 
   /* SUCCESS */
@@ -482,7 +483,7 @@ void req_altauthenuser(
   svr_conn[s].cn_authen = PBS_NET_CONN_AUTHENTICATED;
 
   reply_ack(preq);
-  return;
+  return (PBSE_NONE);
 
   }  /* END req_altauthenuser() */
 
